Added alembic migrations

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,12 @@ services:
       - DB_HOST=${DB_HOST}
       - DB_PORT=${DB_PORT}
       - DB_NAME=${DB_NAME}
+      - DB_PASS=${DB_PASS}
       - POSTGRES_PASSWORD=${DB_PASS}
     ports:
       - "5432:5432"
+    networks:
+      - custom
+networks:
+  custom:
+    driver: bridge
