--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,17 +3,19 @@ services:
     container_name: "db"
     image: postgres:15.6-alpine3.18
     restart: always
-    environment:
-      - DB_USER=${DB_USER}
-      - DB_HOST=${DB_HOST}
-      - DB_PORT=${DB_PORT}
-      - DB_NAME=${DB_NAME}
-      - DB_PASS=${DB_PASS}
-      - POSTGRES_PASSWORD=${DB_PASS}
+    env_file:
+      - .env
     ports:
       - "5432:5432"
     networks:
       - custom
+  redis:
+    container_name: redis
+    image: redis:latest
+    restart: always
+    ports:
+      - "6379:6379"
+
 networks:
   custom:
     driver: bridge
